[package]
name = "lightning-dodge"
version = "0.1.0"
authors = ["N.E.C. <beholdnec@gmail.com>"]

[dependencies]
piston = "0.27.0"
piston2d-graphics = "0.19.0"
pistoncore-glutin_window = "0.33.0"
piston2d-opengl_graphics = "0.37.0"
image = "0.12.0"
cgmath = "0.12.0"
rand = "0.3.0"

[profile.release]
panic = "abort"
