[package]
name = "lightning-dodge"
version = "0.1.0"
authors = ["N.E.C. <beholdnec@gmail.com>"]

[dependencies]
piston = "0.52.1"
piston_window = "0.116.0"
piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.67.1"
piston2d-opengl_graphics = "0.76.0"
image = "0.23.12"
cgmath = "0.17.0"
rand = "0.7.3"

[profile.release]
panic = "abort"
